Update index page title
The page title as well as the logo text was updated to Alexander

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>Alex Donovan Portfolio</title>
+    <title>Alexander Donovan Portfolio</title>
 </head>
 <body>
     <header>
         <div id="Navigation">
-            <a href="index.html">Alex Donovan</a>
+            <a href="index.html">Alexander Donovan</a>
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
