--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                     <h2>My Story</h2>
                     <p>Growing up in the friendly midwest where everyone is your neighbor, you always lent a helping hand and made sure that you treated your neighbor as family. These nurturing characteristics helped me find a passion for creating experiences that everyone can love and enjoy.
                         <br>
-                        When I’m not working on a project, you will usually find me outside enjoying the fresh air and nature. Traveling and seeing new places and experiencing new things is an excitement I often seek, but when I’m home, I love playing golf and backyard games.
+                        When I'm not working on a project, you will usually find me outside enjoying the fresh air and nature. Traveling and seeing new places and experiencing new things is an excitement I often seek, but when I'm home, I love playing golf and backyard games.
                         <br>
                         I have a background in Market Research which led me to become a UX Designer. I always learned about the experiences people had but never had the opportunity to do anything about it. As a UX designer, I can learn about my users and create experiences specifically for them.
                         </p>
