change project link
I updated the "view project" link to reference the new expert.html page that I created instead of my behance project.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div>
                         <h3>Expert</h3>
                         <p>Expert is an app designed to seamlessly link users seeking specialized knowledge with certified Experts in their respective fields. The Expert serves as a trustworthy source, ensuring users receive accurate and dependable answers to their questions. Whether it's professional advice, technical know-how, or in-depth insights, Expert connects you with qualified individuals who are equipped to provide the precise information you need.</p>
-                        <a href="https://www.behance.net/gallery/196215623/Expert" target="_blank">View Project</a>
+                        <a href="expert.html">View Project</a>
                     </div>
                 </div>
             </div>
