--- a/expert.html
+++ b/expert.html
@@ -17,7 +17,7 @@
             </nav>
         </div>
     </header>
-    <main id="expert">
+    <main id="Expert">
        <div>
             <div>
                 <div>
@@ -26,22 +26,22 @@
                 <div>
                     <picture>
                         <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                        <img src="image/expert/Expert Logo.png" alt="Expert Logo">
+                        <img src="image/expert/Expert_Logo.png" alt="Expert_Logo">
                     </picture>
                     <p>Expert is an app designed to seamlessly link users seeking specialized knowledge with certified Experts in their respective fields. The Expert serves as a trustworthy source, ensuring users receive accurate and dependable answers to their questions. Whether it's professional advice, technical know-how, or in-depth insights, Expert connects you with qualified individuals who are equipped to provide the precise information you need.</p>
                 </div>
             </div>
-            <div id="My Process">
+            <div id="My_Process">
                 <div>
                     <h2>My Process</h2>
                 </div>
-                <div id="Research & Insights">
+                <div id="Research_and_Insights">
                     <div>
                         <h3>Research & Insights</h3>
                     </div>
                     <div>
                         <p>I started with a competitive analysis to determine what products are currently available to users and where the gaps are in those products. The analysis lead me to an idea of how the market could be improved and gave me a launch pad to start reaching out to potential users and conduct research on what they found useful and relevant.</p>
-                        <p>Here were my research goals:
+                        <p>Here were my research goals:</p>
                             <ul>
                                 <li>To understand how people currently solve their questions and if they read expert advice.</li>
                                 <li>Help define topics or categories that users would find useful research subjects.</li>
@@ -50,8 +50,7 @@
                                 <li>Understand how people commonly solve problems that they do not have answers to.</li>
                                 <li>Learn what features a user of the app might like to see.</li>
                             </ul>
-                        </p>
-                        <p>From my research I was able to gain these insights:
+                        <p>From my research I was able to gain these insights:</p>
                             <ul>
                                 <li>Users think that a native live chat/video feature is an imperative function of the app.</li>
                                 <li>Not only is it important for the user to be able to find an Expert easily, Experts need the ability to understand the specifics of the user's question to eliminate unnecessary back and forth.</li>
@@ -60,7 +59,6 @@
                                 <li>An app/service similar to this is not commonly used, but there were a few similar apps or services that interviewees have heard of, some being good examples to review for ideas.</li>
                                 <li>Several good ideas were shared by interviewees, specifically around what types of services they would find useful offered by an Expert.</li>
                             </ul>
-                        </p>
                     </div>
                 </div>
                 <div id="Ideation">
@@ -71,15 +69,15 @@
                         <p>From my newly attained research and insights ,I was able to generate 3 different user personas shown below. These personas represent my target audience for users I imagine would engage in an app like Expert.</p>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/User Persona 1.jpg" alt="User Persona 1">
+                            <img src="image/expert/User_Persona_1.jpg" alt="User_Persona_1">
                         </picture>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/User Persona 2.jpg" alt="User Persona 2">
+                            <img src="image/expert/User_Persona_2.jpg" alt="User_Persona_2">
                         </picture>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/User Persona 3.jpg" alt="User Persona 3">
+                            <img src="image/expert/User_Persona_3.jpg" alt="User_Persona_3">
                         </picture>
                     </div>
                 </div>
@@ -90,41 +88,41 @@
                     <div>
                         <p>Okay, I've got a direction for my app, I have users to design for, now I started to make my initial layout designs and low fidelity wireframes and user flows.</p>
                     </div>
-                    <div id="Low Fidelity">
+                    <div id="Low_Fidelity">
                         <h4>Low Fidelity Social Sign in User Flow</h4>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/LF Social Sign In User Flow.jpg" alt="Low Fidelity Social Sign In User Flow">
+                            <img src="image/expert/LF_Social_Sign_In_User_Flow.jpg" alt="Low_Fidelity_Social_Sign_In_User_Flow">
                         </picture>
                         <h4>Low Fidelity Searching for an Expert</h4>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/LF Search for an expert user flow.jpeg" alt="Low Fidelity Searching for an Expert">
+                            <img src="image/expert/LF_Search_for_an_expert_user_flow.jpeg" alt="Low_Fidelity_Searching_for_an_Expert">
                         </picture>
                         <h4>Low Fidelity Creating an Expert Profile</h4>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/LF creating an expert profile user flow.jpg" alt="Low Fidelity Creating an Expert Profile">
+                            <img src="image/expert/LF_creating_an_expert_profile_user_flow.jpg" alt="Low_Fidelity_Creating_an_Expert_Profile">
                         </picture>
                     </div>
                     <div>
                         <p>Low fidelity turned into mid fidelity</p>
                     </div>
-                    <div id="Mid Fidelity">
+                    <div id="Mid_Fidelity">
                         <h4>Mid Fidelity Social Sign in User Flow</h4>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/MF Social Sign In User Flow.jpg" alt="Mid Fidelity Social Sign In User Flow">
+                            <img src="image/expert/MF_Social_Sign_In_User_Flow.jpg" alt="Mid_Fidelity_Social_Sign_In_User_Flow">
                         </picture>
                         <h4>Mid Fidelity Searching for an Expert</h4>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/MF Searching for an expert user flow.jpg" alt="Mid Fidelity Searching for an Expert">
+                            <img src="image/expert/MF_Searching_for_an_expert_user_flow.jpg" alt="Mid_Fidelity_Searching_for_an_Expert">
                         </picture>
                         <h4>Mid Fidelity Creating an Expert Profile</h4>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/MF creating an expert profile user flow.jpg" alt="Mid Fidelity Creating an Expert Profile">
+                            <img src="image/expert/MF_creating_an_expert_profile_user_flow.jpg" alt="Mid_Fidelity_Creating_an_Expert_Profile">
                         </picture>
                     </div>
                 </div>
@@ -142,22 +140,22 @@
                         <h4>Social Login Evolution</h4>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/Social Login Evolution.jpg" alt="Social Login Evolution">
+                            <img src="image/expert/Social_Login_Evolution.jpg" alt="Social_Login_Evolution">
                         </picture>
                         <h4>Home Dashboard Evolution</h4>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/Home dashboard evolution.jpg" alt="Home Dashboard Evolution">
+                            <img src="image/expert/Home_dashboard_evolution.jpg" alt="Home_Dashboard_Evolution">
                         </picture>
                         <h4>Search Page Evolution</h4>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/Search Page Evolution.jpg" alt="Search Page Evolution">
+                            <img src="image/expert/Search_Page_Evolution.jpg" alt="Search_Page_Evolution">
                         </picture>
                         <h4>Settings Page Evolution</h4>
                         <picture>
                             <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                            <img src="image/expert/Settings Page Evolution.jpg" alt="Settings Page Evolution">
+                            <img src="image/expert/Settings_Page_Evolution.jpg" alt="Settings Page Evolution">
                         </picture>
                     </div>
                 </div>
@@ -195,10 +193,10 @@
             <a href="files/resume.pdf" download target="_blank">Download my Resume</a>
             <ul>
                 <li><a href="https://www.linkedin.com/in/alexander-o-donovan" target="_blank">
-                    <?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.0//EN'  'http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd'><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5"/><g><rect fill="#FFFFFF" height="14" width="4" x="7" y="11"/><path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF"/><circle cx="9" cy="8" fill="#FFFFFF" r="2"/></g></g><g/><g/><g/><g/><g/><g/></svg>
+                    <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5"/><g><rect fill="#FFFFFF" height="14" width="4" x="7" y="11"/><path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF"/><circle cx="9" cy="8" fill="#FFFFFF" r="2"/></g></g><g/><g/><g/><g/><g/><g/></svg>
                 </a></li>
                 <li><a href="https://www.behance.net/alex_donovan" target="_blank">
-                    <?xml version="1.0" ?><svg viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M186.5 293c0 19.3-14 25.4-31.2 25.4h-45.1v-52.9h46c18.6.1 30.3 7.8 30.3 27.5zm-7.7-82.3c0-17.7-13.7-21.9-28.9-21.9h-39.6v44.8H153c15.1 0 25.8-6.6 25.8-22.9zm132.3 23.2c-18.3 0-30.5 11.4-31.7 29.7h62.2c-1.7-18.5-11.3-29.7-30.5-29.7zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zM271.7 185h77.8v-18.9h-77.8V185zm-43 110.3c0-24.1-11.4-44.9-35-51.6 17.2-8.2 26.2-17.7 26.2-37 0-38.2-28.5-47.5-61.4-47.5H68v192h93.1c34.9-.2 67.6-16.9 67.6-55.9zM380 280.5c0-41.1-24.1-75.4-67.6-75.4-42.4 0-71.1 31.8-71.1 73.6 0 43.3 27.3 73 71.1 73 33.2 0 54.7-14.9 65.1-46.8h-33.7c-3.7 11.9-18.6 18.1-30.2 18.1-22.4 0-34.1-13.1-34.1-35.3h100.2c.1-2.3.3-4.8.3-7.2z"/></svg>
+                    <svg viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M186.5 293c0 19.3-14 25.4-31.2 25.4h-45.1v-52.9h46c18.6.1 30.3 7.8 30.3 27.5zm-7.7-82.3c0-17.7-13.7-21.9-28.9-21.9h-39.6v44.8H153c15.1 0 25.8-6.6 25.8-22.9zm132.3 23.2c-18.3 0-30.5 11.4-31.7 29.7h62.2c-1.7-18.5-11.3-29.7-30.5-29.7zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zM271.7 185h77.8v-18.9h-77.8V185zm-43 110.3c0-24.1-11.4-44.9-35-51.6 17.2-8.2 26.2-17.7 26.2-37 0-38.2-28.5-47.5-61.4-47.5H68v192h93.1c34.9-.2 67.6-16.9 67.6-55.9zM380 280.5c0-41.1-24.1-75.4-67.6-75.4-42.4 0-71.1 31.8-71.1 73.6 0 43.3 27.3 73 71.1 73 33.2 0 54.7-14.9 65.1-46.8h-33.7c-3.7 11.9-18.6 18.1-30.2 18.1-22.4 0-34.1-13.1-34.1-35.3h100.2c.1-2.3.3-4.8.3-7.2z"/></svg>
                 </a></li>
             </ul>
         </div>
