--- a/expert.html
+++ b/expert.html
@@ -2,6 +2,12 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/expert/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <title>Expert</title>
 </head>
 <body>
@@ -188,15 +194,16 @@
             <h1>Get In Touch</h1>
             <p>Do you like my work?</p>
             <p>Would you like to reach out to me for future opportunity?</p>
-            <a href="mailto:alex21donovan@gmail.com">Email Me</a><br>
-            <a href="tel:+16187914258">Call Me</a><br>
-            <a href="files/resume.pdf" download target="_blank">Download my Resume</a>
+            <a href="about.html#skills" class="button">Read more</a>
+            <a href="mailto:alex21donovan@gmail.com" class="button contact">Email Me</a><br>
+            <a href="tel:+16187914258" class="button contact">Call Me</a><br>
+            <a href="files/resume.pdf" class="button contact" download target="_blank">Download my Resume</a>
             <ul>
                 <li><a href="https://www.linkedin.com/in/alexander-o-donovan" target="_blank">
                     <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5"/><g><rect fill="#FFFFFF" height="14" width="4" x="7" y="11"/><path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF"/><circle cx="9" cy="8" fill="#FFFFFF" r="2"/></g></g><g/><g/><g/><g/><g/><g/></svg>
                 </a></li>
                 <li><a href="https://www.behance.net/alex_donovan" target="_blank">
-                    <svg viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M186.5 293c0 19.3-14 25.4-31.2 25.4h-45.1v-52.9h46c18.6.1 30.3 7.8 30.3 27.5zm-7.7-82.3c0-17.7-13.7-21.9-28.9-21.9h-39.6v44.8H153c15.1 0 25.8-6.6 25.8-22.9zm132.3 23.2c-18.3 0-30.5 11.4-31.7 29.7h62.2c-1.7-18.5-11.3-29.7-30.5-29.7zM448 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48zM271.7 185h77.8v-18.9h-77.8V185zm-43 110.3c0-24.1-11.4-44.9-35-51.6 17.2-8.2 26.2-17.7 26.2-37 0-38.2-28.5-47.5-61.4-47.5H68v192h93.1c34.9-.2 67.6-16.9 67.6-55.9zM380 280.5c0-41.1-24.1-75.4-67.6-75.4-42.4 0-71.1 31.8-71.1 73.6 0 43.3 27.3 73 71.1 73 33.2 0 54.7-14.9 65.1-46.8h-33.7c-3.7 11.9-18.6 18.1-30.2 18.1-22.4 0-34.1-13.1-34.1-35.3h100.2c.1-2.3.3-4.8.3-7.2z"/></svg>
+                    <svg data-name="Layer 1" id="Layer_2" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><title/><rect height="412.22" rx="55.43" width="412.22" x="49.89" y="49.89"/><rect fill="#fefefe" height="17.57" width="61.91" x="295.41" y="183.48"/><path d="M238.64,245c22.3-4.05,20-30,20-30-1.86-35.31-35.82-35.81-35.82-35.81H139.7v148h80.82c44.22-1.42,43.8-41.9,43.8-41.9C266,248.52,238.64,245,238.64,245Zm-64.07-40.08h36.58a18.54,18.54,0,0,1,10.91,3.41c6.69,4.91,6,13.59,6,13.59,0,.15,0,.3,0,.46,0,9.28-8.21,16.54-18.06,16.54H174.57Zm57.8,76.36a19.2,19.2,0,0,1-19.52,19.14H174.57V261.08h39.51c4.25,0,8.61,1.13,11.78,3.95,7.2,6.4,6.49,15.72,6.49,15.72C232.36,280.93,232.37,281.1,232.37,281.28Z" fill="#fefefe"/><path d="M351.77,287.49s-1.35,16.83-25.41,15.41c0,0-24.26-.41-24.67-26.16h77.45s3-26.35-6.29-40.34c0,0-9.73-24-45-24.74,0,0-42.44-2.91-54.94,40.75,0,0-4.66,22.1,0,38.73,0,0,11,36.29,53.46,35.88,0,0,51.7,4.87,53.25-39.53Zm-26.55-53.87s22.76-2.83,25.87,23.25H302.43S301.92,237.68,325.22,233.62Z" fill="#fefefe"/></svg>
                 </a></li>
             </ul>
         </div>
