CSS and Layout Updates

--- a/about.html
+++ b/about.html
@@ -11,11 +11,11 @@
     <title>About Alex Donovan</title>
 </head>
 <body>
-    <header>
-        <div id="Navigation">
-            <a href="index.html">Alex Donovan</a>
+    <header class="css-box-shadow">
+        <div id="Navigation" class="container">
+            <a href="index.html" class="Logo">Alexander Donovan</a>
             <nav>
-                <ul>
+                <ul class="navigation">
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html#skills">About</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -23,71 +23,67 @@
             </nav>
         </div>
     </header>
-    <main id="About_Me">
-       <div>
-        <div>
-            <h1>About Me</h1>
-        </div>
-       </div>
-       <div>
-        <div>
-            <picture>
-                <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                <img src="image/expert/Profile_Picture.JPG" alt="Profile Picture">
-            </picture>
-            <div>
+    <main>
+       <div class="container">
+            <div id="About_Me">
+                <div>
+                    <h1>About Me</h1>
+                </div>
+                <div>
+                    <picture>
+                        <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                        <img src="image/expert/Profile_Picture.JPG" alt="Profile Picture">
+                    </picture>
+                </div>
                 <div>
                     <h2>My Story</h2>
-                    <p>Growing up in the friendly midwest where everyone is your neighbor, you always lent a helping hand and made sure that you treated your neighbor as family. These nurturing characteristics helped me find a passion for creating experiences that everyone can love and enjoy.
-                        <br>
-                        When I'm not working on a project, you will usually find me outside enjoying the fresh air and nature. Traveling and seeing new places and experiencing new things is an excitement I often seek, but when I'm home, I love playing golf and backyard games.
-                        <br>
-                        I have a background in Market Research which led me to become a UX Designer. I always learned about the experiences people had but never had the opportunity to do anything about it. As a UX designer, I can learn about my users and create experiences specifically for them.
-                        </p>
-                    <a href="files/resume.pdf" download target="_blank">Download my Resume</a>
+                    <p>Growing up in the friendly midwest where everyone is your neighbor, you always lent a helping hand and made sure that you treated your neighbor as family. These nurturing characteristics helped me find a passion for creating experiences that everyone can love and enjoy.</p>
+                    <p>When I'm not working on a project, you will usually find me outside enjoying the fresh air and nature. Traveling and seeing new places and experiencing new things is an excitement I often seek, but when I'm home, I love playing golf and backyard games.</p>
+                    <p>I have a background in Market Research which led me to become a UX Designer. I always learned about the experiences people had but never had the opportunity to do anything about it. As a UX designer, I can learn about my users and create experiences specifically for them.</p>
+                    <a href="files/resume.pdf" download target="_blank" class="button">Download my Resume</a>
                 </div>
                 <div>
                     <h2>Skills and Tools</h2>
-                    <div>
-                        <h3>Relavant Skills</h3>
-                            <ul>
-                                <li>User Research</li>
-                                <li>Interaction Design</li>
-                                <li>Agile/Scrum Process</li>
-                                <li>Project Management</li>
-                                <li>Frontend Development</li>
-                            </ul>
-                    </div>
-                    <div>
-                        <h3>Tools I Use</h3>
-                            <ul>
-                                <li>Figma</li>
-                            </ul>
-                    </div>
+                </div>
+                <div>
+                    <h3>Relavant Skills</h3>
+                        <ul>
+                            <li>User Research</li>
+                            <li>Interaction Design</li>
+                            <li>Agile/Scrum Process</li>
+                            <li>Project Management</li>
+                            <li>Frontend Development</li>
+                        </ul>
+                </div>
+                <div>
+                    <h3>Tools I Use</h3>
+                        <ul>
+                            <li>Figma</li>
+                        </ul>
                 </div>
             </div>
         </div>
-       </div>
     </main>
     <footer id="contact">
-        <div id="Get_In_Touch">
-            <h1>Get In Touch</h1>
-            <p>Do you like my work?</p>
-            <p>Would you like to reach out to me for future opportunity?</p>
-            <a href="about.html#skills" class="button">Read more</a>
-            <a href="mailto:alex21donovan@gmail.com" class="button contact">Email Me</a><br>
-            <a href="tel:+16187914258" class="button contact">Call Me</a><br>
-            <a href="files/resume.pdf" class="button contact" download target="_blank">Download my Resume</a>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/alexander-o-donovan" target="_blank">
-                    <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5"/><g><rect fill="#FFFFFF" height="14" width="4" x="7" y="11"/><path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF"/><circle cx="9" cy="8" fill="#FFFFFF" r="2"/></g></g><g/><g/><g/><g/><g/><g/></svg>
-                </a></li>
-                <li><a href="https://www.behance.net/alex_donovan" target="_blank">
-                    <svg data-name="Layer 1" id="Layer_2" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><title/><rect height="412.22" rx="55.43" width="412.22" x="49.89" y="49.89"/><rect fill="#fefefe" height="17.57" width="61.91" x="295.41" y="183.48"/><path d="M238.64,245c22.3-4.05,20-30,20-30-1.86-35.31-35.82-35.81-35.82-35.81H139.7v148h80.82c44.22-1.42,43.8-41.9,43.8-41.9C266,248.52,238.64,245,238.64,245Zm-64.07-40.08h36.58a18.54,18.54,0,0,1,10.91,3.41c6.69,4.91,6,13.59,6,13.59,0,.15,0,.3,0,.46,0,9.28-8.21,16.54-18.06,16.54H174.57Zm57.8,76.36a19.2,19.2,0,0,1-19.52,19.14H174.57V261.08h39.51c4.25,0,8.61,1.13,11.78,3.95,7.2,6.4,6.49,15.72,6.49,15.72C232.36,280.93,232.37,281.1,232.37,281.28Z" fill="#fefefe"/><path d="M351.77,287.49s-1.35,16.83-25.41,15.41c0,0-24.26-.41-24.67-26.16h77.45s3-26.35-6.29-40.34c0,0-9.73-24-45-24.74,0,0-42.44-2.91-54.94,40.75,0,0-4.66,22.1,0,38.73,0,0,11,36.29,53.46,35.88,0,0,51.7,4.87,53.25-39.53Zm-26.55-53.87s22.76-2.83,25.87,23.25H302.43S301.92,237.68,325.22,233.62Z" fill="#fefefe"/></svg>
-                </a></li>
-            </ul>
+        <div class="container">
+            <div id="Get_In_Touch">
+                <h1>Get In Touch</h1>
+                <p>Do you like my work?</p>
+                <p>Would you like to reach out to me for future opportunity?</p>
+                <a href="mailto:alex21donovan@gmail.com" class="button contact">Email Me</a><br>
+                <a href="tel:+16187914258" class="button contact">Call Me</a><br>
+                <a href="files/resume.pdf" class="button contact" download target="_blank">Download my Resume</a>
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/alexander-o-donovan" target="_blank">
+                        <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5"/><g><rect fill="#FFFFFF" height="14" width="4" x="7" y="11"/><path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF"/><circle cx="9" cy="8" fill="#FFFFFF" r="2"/></g></g><g/><g/><g/><g/><g/><g/></svg>
+                    </a></li>
+                    <li><a href="https://www.behance.net/alex_donovan" target="_blank">
+                        <svg enable-background="new 0 0 32 32" height="32px" id="Layer_2" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M38.031,27.257c-3.174,0-3.615,3.168-3.615,3.168h6.748C41.164,30.425,41.207,27.257,38.031,27.257z"/><path d="M22.721,30.425h-5.982v5.492h5.296c0.09,0,0.225,0.002,0.383,0c0.852-0.02,2.467-0.268,2.467-2.67   C24.885,30.396,22.721,30.425,22.721,30.425z"/><path d="M28.348,5.101c-13.6,0-24.625,11.023-24.625,24.623c0,13.6,11.025,24.625,24.625,24.625   c13.598,0,24.623-11.025,24.623-24.625C52.971,16.125,41.945,5.101,28.348,5.101z M33.531,20.231h8.477v2.53h-8.477V20.231z    M29.246,33.503c0,6.271-6.525,6.064-6.525,6.064h-5.982h-0.175h-4.535V19.021h4.535h0.175h5.982c3.248,0,5.812,1.794,5.812,5.47   c0,3.676-3.135,3.91-3.135,3.91C29.531,28.401,29.246,33.503,29.246,33.503z M45.104,33.167H34.457   c0,3.816,3.615,3.576,3.615,3.576c3.414,0,3.295-2.211,3.295-2.211h3.617c0,5.867-7.033,5.465-7.033,5.465   c-8.436,0-7.893-7.855-7.893-7.855s-0.008-7.893,7.893-7.893C46.268,24.249,45.104,33.167,45.104,33.167z"/><path d="M24.174,24.81c0-2.137-1.453-2.137-1.453-2.137h-0.77h-5.212v4.584h5.611C23.318,27.257,24.174,26.946,24.174,24.81z"/></g></svg>
+                    </a></li>
+                </ul>
+                <p>Copywrite Alex Donovan 2024</p>
+            </div>
         </div>
-        <p>Copywrite Alex Donovan 2024</p>
     </footer>
 </body>
 </html>
