--- a/about.html
+++ b/about.html
@@ -24,28 +24,26 @@
         </div>
     </header>
     <main>
-       <div class="container">
-            <div id="About_Me">
-                <div>
-                    <h1>About Me</h1>
-                </div>
-                <div>
-                    <picture>
-                        <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
-                        <img src="image/expert/Profile_Picture.JPG" alt="Profile Picture">
-                    </picture>
-                </div>
-                <div>
-                    <h2>My Story</h2>
-                    <p>Growing up in the friendly midwest where everyone is your neighbor, you always lent a helping hand and made sure that you treated your neighbor as family. These nurturing characteristics helped me find a passion for creating experiences that everyone can love and enjoy.</p>
-                    <p>When I'm not working on a project, you will usually find me outside enjoying the fresh air and nature. Traveling and seeing new places and experiencing new things is an excitement I often seek, but when I'm home, I love playing golf and backyard games.</p>
-                    <p>I have a background in Market Research which led me to become a UX Designer. I always learned about the experiences people had but never had the opportunity to do anything about it. As a UX designer, I can learn about my users and create experiences specifically for them.</p>
-                    <a href="files/resume.pdf" download target="_blank" class="button">Download my Resume</a>
-                </div>
-                <div>
-                    <h2>Skills and Tools</h2>
-                </div>
-                <div>
+        <div id="About_Me">
+            <div class="container">
+                <h1>About Me</h1>
+                    <div>
+                        <picture>
+                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <img src="image/expert/Profile_Picture.JPG" alt="Profile Picture">
+                        </picture>
+                    </div>
+                    <div>
+                        <h2>My Story</h2>
+                        <p>Growing up in the friendly midwest where everyone is your neighbor, you always lent a helping hand and made sure that you treated your neighbor as family. These nurturing characteristics helped me find a passion for creating experiences that everyone can love and enjoy.</p>
+                        <p>When I'm not working on a project, you will usually find me outside enjoying the fresh air and nature. Traveling and seeing new places and experiencing new things is an excitement I often seek, but when I'm home, I love playing golf and backyard games.</p>
+                        <p>I have a background in Market Research which led me to become a UX Designer. I always learned about the experiences people had but never had the opportunity to do anything about it. As a UX designer, I can learn about my users and create experiences specifically for them.</p>
+                        <a href="files/resume.pdf" download target="_blank" class="button">Download my Resume</a>
+                    </div>
+            </div>
+            <div class="container">
+                <h2>Skills and Tools</h2>
+                <div class="col-md-6">
                     <h3>Relavant Skills</h3>
                         <ul>
                             <li>User Research</li>
@@ -55,10 +53,12 @@
                             <li>Frontend Development</li>
                         </ul>
                 </div>
-                <div>
+                <div class="col-md-6">
                     <h3>Tools I Use</h3>
                         <ul>
                             <li>Figma</li>
+                            <li>VS Code</li>
+                            <li>GitHub</li>
                         </ul>
                 </div>
             </div>
