--- a/about.html
+++ b/about.html
@@ -13,15 +13,21 @@
 </head>
 <body>
     <header class="css-box-shadow">
-        <div id="Navigation" class="container">
-            <div class="navtoggle" id="myNavtoggle">
+        <div class="container">
+            <div class="header-content" class="navtoggle" id="myNavtoggle">
                 <a href="index.html" class="Logo"><i class="fa-solid fa-golf-ball-tee fa-2xl"></i></a>
                 <nav>
                     <ul class="navigation">
                         <li><a href="index.html">Work</a></li>
                         <li><a href="about.html#skills">About</a></li>
-                        <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
-                        <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fa-solid fa-bars fa-2xl"></i></a></li>
+                        <li>
+                            <a href="#contact" onclick="menuToggle()">Contact</a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0);" class="icon" onclick="menuToggle()">
+                                <i class="fa-solid fa-bars fa-2xl"></i>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -72,23 +78,25 @@
         <div class="container">
             <div id="Get_In_Touch">
                 <h1>Get In Touch</h1>
-                <p>Do you like my work?</p>
-                <p>Would you like to reach out to me for future opportunity?</p>
-                <a href="mailto:alex21donovan@gmail.com" class="button contact">Email Me</a><br>
-                <a href="tel:+16187914258" class="button contact">Call Me</a><br>
-                <a href="files/resume.pdf" class="button contact" download target="_blank">Download my Resume</a>
-                <ul>
-                    <li><a href="https://www.linkedin.com/in/alexander-o-donovan" target="_blank">
-                        <svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#007BB5"/><g><rect fill="#FFFFFF" height="14" width="4" x="7" y="11"/><path d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z" fill="#FFFFFF"/><circle cx="9" cy="8" fill="#FFFFFF" r="2"/></g></g><g/><g/><g/><g/><g/><g/></svg>
-                    </a></li>
-                    <li><a href="https://www.behance.net/alex_donovan" target="_blank">
-                        <svg enable-background="new 0 0 32 32" height="32px" id="Layer_2" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M38.031,27.257c-3.174,0-3.615,3.168-3.615,3.168h6.748C41.164,30.425,41.207,27.257,38.031,27.257z"/><path d="M22.721,30.425h-5.982v5.492h5.296c0.09,0,0.225,0.002,0.383,0c0.852-0.02,2.467-0.268,2.467-2.67   C24.885,30.396,22.721,30.425,22.721,30.425z"/><path d="M28.348,5.101c-13.6,0-24.625,11.023-24.625,24.623c0,13.6,11.025,24.625,24.625,24.625   c13.598,0,24.623-11.025,24.623-24.625C52.971,16.125,41.945,5.101,28.348,5.101z M33.531,20.231h8.477v2.53h-8.477V20.231z    M29.246,33.503c0,6.271-6.525,6.064-6.525,6.064h-5.982h-0.175h-4.535V19.021h4.535h0.175h5.982c3.248,0,5.812,1.794,5.812,5.47   c0,3.676-3.135,3.91-3.135,3.91C29.531,28.401,29.246,33.503,29.246,33.503z M45.104,33.167H34.457   c0,3.816,3.615,3.576,3.615,3.576c3.414,0,3.295-2.211,3.295-2.211h3.617c0,5.867-7.033,5.465-7.033,5.465   c-8.436,0-7.893-7.855-7.893-7.855s-0.008-7.893,7.893-7.893C46.268,24.249,45.104,33.167,45.104,33.167z"/><path d="M24.174,24.81c0-2.137-1.453-2.137-1.453-2.137h-0.77h-5.212v4.584h5.611C23.318,27.257,24.174,26.946,24.174,24.81z"/></g></svg>
-                    </a></li>
-                </ul>
+                <p>What do you think? Do you like my work?</p>
+                <p>Connect with me:</p>
+                <a href="mailto:alex21donovan@gmail.com" class="button contact">Email Me</a>
+                <a href="tel:+16187914258" class="button contact">Call Me</a>
+                <a href="files/resume.pdf" class="button contact" download target="_blank">Resume</a><br>
+                <br>
+                <a href="https://www.linkedin.com/in/alexander-o-donovan" target="_blank">
+                    <i class="fa-brands fa-linkedin fa-2xl"></i>
+                </a>
+                <a href="https://www.behance.net/alex_donovan" target="_blank">
+                    <i class="fa-brands fa-square-behance fa-2xl"></i>
+                </a>
                 <p>Copywrite Alex Donovan 2024</p>
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	 crossorigin="anonymous">
+	</script>
     <script src="js/expert/scripts.js"></script>
 </body>
 </html>
