--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
     <header class="css-box-shadow">
         <div class="container">
-            <div class="header-content" class="navtoggle" id="myNavtoggle">
+            <div class="navtoggle" id="myNavtoggle">
                 <a href="index.html" class="Logo"><i class="fa-solid fa-golf-ball-tee fa-2xl"></i></a>
                 <nav>
                     <ul class="navigation">
