--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" type="text/css" href="css/expert/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Playfair+Display:wght@500&display=swap" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Playfair+Display:wght@500&display=swap" rel="stylesheet" type="text/css">
     <title>Alexander Donovan Portfolio</title>
 </head>
-<body>
+    <body> 
     <header class="css-box-shadow">
         <div class="container">
             <div class="navtoggle" id="myNavtoggle">
